syntax = "proto3";

package station;

option go_package = "github.com/psamuthis/grpc-station/proto";

service Station{
    rpc PollStation(PollStationRequest) returns (StationReply);
    rpc FindNearestStation(NearStationRequest) returns (NearStationResponse);
    rpc UpdateStationStock(UpdateStationRequest) returns (UpdateStationReply);
}

message PollStationRequest {
    string name = 1;
}

message NearStationRequest {
    double car_latitude = 1;
    double car_longitude = 2;
    double search_radius = 3;
}

message UpdateStationRequest {
    string station_name = 1;
    int64 stock_increment = 2;
}

message StationReply {
    int64 stock = 1;
    double station_latitude = 2;
    double station_longitude = 3;
}

message NearStationReply {
    string name = 1;
    float distance = 2;
    int64 stock = 3;
    double station_latitude = 4;
    double station_longitude = 5;
}

message NearStationResponse {
    repeated NearStationReply stations = 1;
}

message UpdateStationReply {
    bool updated = 1;
}